Bug 552944 - No relationship between tabs and associated property page in new tabbrowser construct, r=enn, davidb, marcoz, sr=neil

--HG--
rename : accessible/tests/mochitest/test_relations.html => accessible/tests/mochitest/relations/test_general.html
rename : accessible/tests/mochitest/test_relations.xul => accessible/tests/mochitest/relations/test_general.xul
rename : accessible/tests/mochitest/test_relations_tree.xul => accessible/tests/mochitest/relations/test_tree.xul